# isnad

./: .gitignore  Cargo.toml  Makefile  NOTES.md  README.md  history.txt
articles/: intro.md  launch.md
colab/: translate_colab.ipynb
colab_translate/: README.md  split_csv.py  translate_colab.ipynb
docs/: DATA_SOURCES.md  METHODOLOGY.md  TRAINING.md
frontend/: package-lock.json  package.json  svelte.config.js
models/: Modelfile
notebooks/: train_colab.ipynb
qul/: taqi-ud-din-al-hilali-muhsin-khan-simple.json
scripts/: _turath_fetch.py  analyze_mismatches.py  benchmark_embeddings.py  build_abu_dawud_mapping.py  build_blog.py  build_hadith_mapping.py  build_ibn_majah_mapping.py  build_muslim_mapping.py  build_narrator_book_mapping.py  build_nasai_mapping.py  build_semantic_data.py  build_tirmidhi_mapping.py  check_db.rs  download_quran_fonts.sh  download_turath_pdfs.py  dryrun_chain_align.py  dryrun_v2.py  extract_mustalah_glossary.py  fetch_awn_mabud.py  fetch_fathulbari.py  fetch_ibn_majah.py  fetch_nawawi.py  fetch_sahih_nasai.py  fetch_tabari.py  fetch_tafsir.py  fetch_tahdhib.py  fetch_tuhfat_ahwadhi.py  index_books.py  match_certainty.py  match_debug.py  match_test.py  prepare_quran_data.py  prepare_training_data.py  test_bio_match.py  test_semantic_match.py  test_semantic_v2.py  test_text_match.py  test_text_match_v2.py  train_mlx.sh  verify_resolver.py  (+1 more)
site/: blog.html  index.html
src/: agentic_rag.rs  book_chat.rs  classify.rs  db.rs  embed.rs  lib.rs  main.rs  models.rs  rag.rs  search.rs  tools.rs  unified.rs  unified_rag.rs
src/web/: mod.rs  (+5 more)
(+140 files in other folders)
